--- a/raport-2015-09-22.Rmd
+++ b/raport-2015-09-22.Rmd
@@ -10,12 +10,12 @@ output:
 ```{r, message=FALSE, warning=FALSE}
 library(DendriticSpineR)
 
-spines <- read_spines(file = "zebrane.csv",
+spines <- read_spines(file = "kolce dendrytyczne myszy tg3-gm.csv",
                       animal_col_name = "Animal",
                       group_col_name = "Group",
                       photo_col_name = "Photo_ID_rel",
                       spines_col_name = "spine_number",
-                      properties_col_name = c("length", "foot", "head_width"),
+                      properties_col_name = c("length", "area", "length_area_ratio", "length_width_ratio"),
                       header = TRUE, sep = ";")
 ```
 
@@ -34,31 +34,46 @@ plot_crossed_effects(spines, property = "length", strat = "Animal:group", mixed 
 diffogram(ms)
 ```
 
-# foot 
+# area 
 
 ```{r}
-plot_distributions(spines, property = "foot", ecdf = TRUE, x_lim = c(0, 2))
-plot_distributions(spines, property = "foot", ecdf = FALSE, x_lim = c(0, 2))
+plot_distributions(spines, property = "area", ecdf = TRUE, x_lim = c(0, 2))
+plot_distributions(spines, property = "area", ecdf = FALSE, x_lim = c(0, 2))
 
-plot_animals(spines, property = "foot", box = FALSE)
-plot_animals(spines, property = "foot", box = TRUE)
+plot_animals(spines, property = "area", box = FALSE)
+plot_animals(spines, property = "area", box = TRUE)
 
-plot_crossed_effects(spines, property = "foot", strat = "Animal:group", mixed = TRUE)
+plot_crossed_effects(spines, property = "area", strat = "Animal:group", mixed = TRUE)
 
 (ms <- model_spines(spines, photo_col_name = "Photo_ID_rel"))
 diffogram(ms)
 ```
 
-# head_width 
+# length_area_ratio 
 
 ```{r}
-plot_distributions(spines, property = "head_width", ecdf = TRUE, x_lim = c(0, 2))
-plot_distributions(spines, property = "head_width", ecdf = FALSE, x_lim = c(0, 2))
+plot_distributions(spines, property = "length_area_ratio", ecdf = TRUE, x_lim = c(0, 2))
+plot_distributions(spines, property = "length_area_ratio", ecdf = FALSE, x_lim = c(0, 2))
 
-plot_animals(spines, property = "head_width", box = FALSE)
-plot_animals(spines, property = "head_width", box = TRUE)
+plot_animals(spines, property = "length_area_ratio", box = FALSE)
+plot_animals(spines, property = "length_area_ratio", box = TRUE)
 
-plot_crossed_effects(spines, property = "head_width", strat = "Animal:group", mixed = TRUE)
+plot_crossed_effects(spines, property = "length_area_ratio", strat = "Animal:group", mixed = TRUE)
+
+(ms <- model_spines(spines, photo_col_name = "Photo_ID_rel"))
+diffogram(ms)
+```
+
+# length_width_ratio 
+
+```{r}
+plot_distributions(spines, property = "length_width_ratio", ecdf = TRUE, x_lim = c(0, 2))
+plot_distributions(spines, property = "length_width_ratio", ecdf = FALSE, x_lim = c(0, 2))
+
+plot_animals(spines, property = "length_width_ratio", box = FALSE)
+plot_animals(spines, property = "length_width_ratio", box = TRUE)
+
+plot_crossed_effects(spines, property = "length_width_ratio", strat = "Animal:group", mixed = TRUE)
 
 (ms <- model_spines(spines, photo_col_name = "Photo_ID_rel"))
 diffogram(ms)
